Update Maya details

--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
                         <li>Earn a base rate of 3.5% p.a., which applies to savings up to P5,000,000. Excess of P5M will not earn interest.</li>
                         <li>Daily interest crediting.</li><br>
                         <p class="details-header">💰 No Maya account yet? Sign up using our referral code "J6K0M4K1ZN6K". Verify your account and spend at least P20 to get exclusive reward from Maya 💰</p><br>
-                        <p class="details-header">💰 Earn up to 14% interest p.a. promo - until Feb. 29, 2024 💰</p>
+                        <p class="details-header">💰 Get up to 14% interest promo - until Feb. 29, 2024 💰</p>
                         <li>Open Maya Savings account and boost your interest rate to up to 14% p.a. by making payments with Maya.</li>
                         <li>All bonus interest rates only applies to max balance of up to Php100,000.</li>
                         <li>Learn more <a href="https://www.maya.ph/deals/aonline-purchase/get-2-pa-intereston-your-maya-savings-when-you-switch-to-maya-2023-september" target="_blank">here.</a></li><br>
