Update OwnBank details

--- a/index.html
+++ b/index.html
@@ -97,6 +97,42 @@
                 </div>
 
 
+                                    <!-- Row 2 -->  
+                <div class="banks-logo">
+                    <img src="ownbank.png" alt="ownbank logo">
+                </div>
+                <div class="banks-savings">Own It</div>
+                <div class="banks-interest">
+                    <p class="interest">6% + 6%</p>
+                </div>
+
+                <div class="expand-button">
+                    <i class="fa-solid fa-chevron-down" style="color: #000000;"></i>
+                </div>
+                <div class="interest-details">
+                    <ul>
+                        <li>Basic accounts earn 6% interest p.a. on savings up to P50,000.</li>
+                        <li>Upgraded accounts earn 6% p.a. on all deposited savings(no limit).</li>
+                        <li>Daily interest crediting.</li><br>
+                        <p class="details-header">💰 Lemoneyd x OwnBank 💰</p>  
+                        <p class="details-header">Get an additional 6% p.a. for 1 month, for a total of 12% p.a + P320,000 Trial Bonus vouchers, which you can use to deposit into your Own It savings.</p>
+
+                        <p class="details-header">Visit <a href="https://app.ownbank.com/lemoneyd" target="_blank">https://app.ownbank.com/lemoneyd</a> and sign up using referral code "EFMPKU".</p>
+                        <p class="details-header">Full mechanics of the promo here.</p>  
+                        <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fweb.facebook.com%2Flemoneydofficial%2Fposts%2Fpfbid0XPCeaZfRibTSFrpHPVSPRZy22pFhRuqXfBcCjb9uArvkwxNddq4QoB2tX49fP6wml&show_text=true&width=500" width="500" height="680" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+
+                        <p class="details-header">The interest earnings from these Trial Bonus vouchers are yours and withdrawable.</p><br>
+                        <p class="details-header">Key features:</p>
+                        <li>Unlimited free bank transfers via InstaPay and PESONet.</li>
+                        <li>Transfer to other OwnBank accounts using mobile number.</li>
+                        <li>Access high-interest Time Deposits.</li>
+                        <li>Request Bank Statement and Certificate by emailing customer support.</li>
+                        <li>Access Mobile load, Game credits, Data plans, and Personal Accident Insurance.</li>
+                        <li>Learn more <a href="https://www.ownbank.com/help-center" target="_blank">here.</a></li>
+                    </ul>
+                </div>
+
+
 
                     <!-- Row 2 -->
                 <div class="banks-logo">
@@ -127,35 +163,7 @@
                 </div>
 
 
-                    <!-- Row 3 -->  
-                <div class="banks-logo">
-                    <img src="ownbank.png" alt="ownbank logo">
-                </div>
-                <div class="banks-savings">Own It</div>
-                <div class="banks-interest">
-                    <p class="interest">6%</p>
-                </div>
 
-                <div class="expand-button">
-                    <i class="fa-solid fa-chevron-down" style="color: #000000;"></i>
-                </div>
-                <div class="interest-details">
-                    <ul>
-                        <li>Basic accounts earn 6% interest p.a. on savings up to P50,000.</li>
-                        <li>Upgraded accounts earn 6% p.a. on all deposited savings(no limit).</li>
-                        <li>Daily interest crediting.</li><br>
-                        <p class="details-header">💰 Get P300,000 + P20,000 Trial Bonus voucher, which you can use to deposit into your Own It savings 💰</p>
-                        <p class="details-header">Use referral code "EFMPKU" when you sign-up and upgrade your account to claim the vouchers.</p> 
-                        <p class="details-header">The interest earnings from these Trial Bonus vouchers are yours and withdrawable.</p><br>
-                        <p class="details-header">Key features:</p>
-                        <li>Unlimited free bank transfers via InstaPay and PESONet.</li>
-                        <li>Transfer to other OwnBank accounts using mobile number.</li>
-                        <li>Access high-interest Time Deposits.</li>
-                        <li>Request Bank Statement and Certificate by emailing customer support.</li>
-                        <li>Access Mobile load, Game credits, Data plans, and Personal Accident Insurance.</li>
-                        <li>Learn more <a href="https://www.ownbank.com/help-center" target="_blank">here.</a></li>
-                    </ul>
-                </div>
 
 
                     <!-- Row 4 -->  
