Update the interest rates

--- a/index.html
+++ b/index.html
@@ -117,11 +117,8 @@
                         <p class="details-header">💰 Lemoneyd x OwnBank 💰</p>  
                         <p class="details-header">Get an additional 6% p.a. for 1 month, for a total of 12% p.a + P320,000 Trial Bonus vouchers, which you can use to deposit into your Own It savings.</p>
 
-                        <p class="details-header">Visit <a href="https://app.ownbank.com/lemoneyd" target="_blank">https://app.ownbank.com/lemoneyd</a> and sign up using referral code "EFMPKU".</p>
-                        <p class="details-header">Full mechanics of the promo here.</p>  
-                        <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fweb.facebook.com%2Flemoneydofficial%2Fposts%2Fpfbid0XPCeaZfRibTSFrpHPVSPRZy22pFhRuqXfBcCjb9uArvkwxNddq4QoB2tX49fP6wml&show_text=true&width=500" width="500" height="680" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+                        <p class="details-header">Visit <a href="https://app.ownbank.com/lemoneyd" target="_blank">https://app.ownbank.com/lemoneyd</a> and sign up using referral code "EFMPKU".  Full mechanics of the promo <a href="https://www.facebook.com/lemoneydofficial/posts/pfbid0XPCeaZfRibTSFrpHPVSPRZy22pFhRuqXfBcCjb9uArvkwxNddq4QoB2tX49fP6wml" target="_blank">here</a>.</p><br>
 
-                        <p class="details-header">The interest earnings from these Trial Bonus vouchers are yours and withdrawable.</p><br>
                         <p class="details-header">Key features:</p>
                         <li>Unlimited free bank transfers via InstaPay and PESONet.</li>
                         <li>Transfer to other OwnBank accounts using mobile number.</li>
@@ -151,7 +148,7 @@
                         <li>The regular interest rate of Netbank Mobile is 4% p.a.</li>
                         <li>Daily interest crediting.</li><br>
                         <p class="details-header">💰 Lemoneyd x Netbank Mobile 💰</p>
-                        <p class="details-header">Get 6% interest p.a. and P10 reward when you sign up using our unique referral code "AAAH2292" & select "Netbank Mobile/Tipid Hacks" as the branch.</p><br>
+                        <p class="details-header">Get 6% interest p.a. and P10 reward when you sign up using referral code "AAAH2292" & select "Digital Banks PH Tipid Hacks" as the branch.</p><br>
 
                         <p class="details-header">Key features:</p>
                         <li>Unlimited free bank transfers via InstaPay and PESONet.</li>
@@ -164,97 +161,7 @@
 
 
 
-
-
-                    <!-- Row 4 -->  
-                <div class="banks-logo">
-                    <img src="cimbgcash-logo.png" alt="gsave logo">
-                </div>
-                <div class="banks-savings">GSave (via GCash)</div>
-                <div class="banks-interest">
-                    <p class="interest">5%</p>
-                </div>
-
-                <div class="expand-button">
-                    <i class="fa-solid fa-chevron-down" style="color: #000000;"></i>
-                </div>
-                <div class="interest-details">
-                    <ul>
-                        <li>The regular interest rate of GSave is 2.6% p.a.</li>
-                        <li>Monthly interest crediting.</li><br>
-                        <p class="details-header">💰 5% interest promo - runs from Feb. 1 to Feb. 29, 2024 💰</p>
-                        <li>New and existing accounts will earn 5% p.a. on their total ADB (no limit).</li>
-                        <li>The 5% p.a. promo interest already includes the regular rate of 2.6%.</li>
-                        <li>Learn more <a href="https://www.cimbbank.com.ph/en/promotions/promotions/new-year-good-fortune-promo.html" target="_blank">here.</a></li><br>
-                        <p class="details-header">Key features:</p>
-                        <li>Access your account through the GCash and CIMB app.</li>
-                        <li>Request and download Bank Certificate.</li>
-                        <li>Physical and Virtual Debit Card available through the CIMB app.</li>
-                        <li>Account holders who maintain a minimum ADB of P5,000 for one month will be able to enjoy free life insurance.</li>
-                        <li>Learn more <a href="https://www.cimbbank.com.ph/en/digital-banking/our-products/gsave.html" target="_blank">here.</a></li>
-                    </ul>
-                </div>
-
-
-
-                    <!-- Row 5 -->
-                <div class="banks-logo">
-                    <img src="cimb-logo.png" alt="cimb bank logo">
-                </div>
-                <div class="banks-savings">UpSave (via CIMB)</div>
-                <div class="banks-interest">
-                    <p class="interest">5%</p>
-                </div>
-
-                <div class="expand-button">
-                    <i class="fa-solid fa-chevron-down" style="color: #000000;"></i>
-                </div>
-                <div class="interest-details">
-                    <ul>
-                        <li>The regular interest rate of UpSave is 2.5% p.a.</li>
-                        <li>Monthly interest crediting.</li><br>
-                        <p class="details-header">💰 5% interest promo - runs from Feb. 1 to Feb. 29, 2024 💰</p>
-                        <li>New and existing accounts will earn 5% p.a. on their total ADB (no limit).</li>
-                        <li>The 5% p.a. promo interest already includes the regular rate of 2.5%.</li>
-                        <li>Learn more <a href="https://www.cimbbank.com.ph/en/promotions/promotions/new-year-good-fortune-promo.html" target="_blank">here.</a></li><br>
-                        <p class="details-header">Key features:</p>
-                        <li>Access your account through the CIMB app.</li>
-                        <li>Request and download Bank Certificate.</li>
-                        <li>Physical and Virtual Debit Card available through the CIMB app.</li>
-                        <li>Account holders who maintain a minimum ADB of P5,000 for one month will be able to enjoy free life insurance.</li>
-                        <li>Learn more <a href="https://www.cimbbank.com.ph/en/digital-banking/our-products/upsave.html" target="_blank">here.</a></li>
-                    </ul>
-                </div>
-
-
-                    <!-- Row 6 -->
-                <div class="banks-logo">
-                    <img src="gotyme-logo.png" alt="gotyme bank logo">
-                </div>
-                <div class="banks-savings">Go Save</div>
-                <div class="banks-interest">
-                    <p class="interest">5%</p>
-                </div>
-
-                <div class="expand-button">
-                    <i class="fa-solid fa-chevron-down" style="color: #000000;"></i>
-                </div>
-                <div class="interest-details">
-                    <ul>
-                        <li>Create up to 5 separate Go Save accounts and earn 5% interest p.a. for each account(no limit).</li>
-                        <li>Monthly interest crediting.</li><br>
-                        <p class="details-header">Key features:</p>
-                        <li>Set customizable target amounts and timeframes for each Go Save accounts.</li>
-                        <li>Schedule auto-saves or save your change when you shop.</li>
-                        <li>Transfers to other local banks are free up to 3 times per week.</li>
-                        <li>Get a free ATM debit card.</li>
-                        <li>Earn Go Rewards points that you can redeem as cash, which will be credited to your account.</li>
-                        <li>Learn more <a href="https://www.gotyme.com.ph/" target="_blank">here.</a></li>
-                    </ul>
-                </div>
-
-
-                    <!-- Row 7 -->
+                    <!-- Row 3 -->
                 <div class="banks-logo">
                     <img src="banko-logo.png" alt="bpi banko logo">
                 </div>
@@ -280,9 +187,11 @@
                         <li>Learn more <a href="https://www.banko.com.ph/todo-savings/" target="_blank">here.</a></li>
                     </ul>
                 </div>
-               
 
-                    <!-- Row 8 -->
+
+
+
+                    <!-- Row 4 -->
                 <div class="banks-logo">
                     <img src="seabank-logo.png" alt="seabank logo">
                 </div>
@@ -296,10 +205,10 @@
                 </div>
                 <div class="interest-details">
                     <ul>
-                        <li>Earn 4.5% p.a. for savings up to P300,000.</li>
-                        <li>Excess of P300,000 will earn 3% p.a.</li>
+                        <li>Earn 4.5% p.a. for savings up to P350,000.</li>
+                        <li>Excess of P350,000 will earn 3% p.a.</li>
                         <li>Daily interest crediting.</li><br>
-                        <p class="details-header">💰 Get P50 reward when you sign up using referral code "RB525039". 💰</p>
+                        <p class="details-header">💰 Get P50 reward when you sign up using referral code "RB525039" 💰</p>
                         <p class="details-header">Deposit atleast P1,000 and maintain it in your account for 3 days to get the reward.</p><br>
                         <p class="details-header">Key features:</p>
                         <li>Free 15 InstaPay and PESONet transfers to other banks or e-wallets per week.</li>
@@ -309,6 +218,69 @@
                         <li>Learn more <a href="https://www.seabank.ph/product/savings" target="_blank">here.</a></li>
                     </ul>
                 </div>
+
+
+
+                                   <!-- Row 4 -->  
+                <div class="banks-logo">
+                    <img src="cimbgcash-logo.png" alt="gsave logo">
+                </div>
+                <div class="banks-savings">GSave (via GCash)</div>
+                <div class="banks-interest">
+                    <p class="interest">4% - 15%</p>
+                </div>
+
+                <div class="expand-button">
+                    <i class="fa-solid fa-chevron-down" style="color: #000000;"></i>
+                </div>
+                <div class="interest-details">
+                    <ul>
+                        <li>The regular interest rate of GSave is 2.6% p.a.</li>
+                        <li>Monthly interest crediting.</li><br>
+                        <p class="details-header">💰 Up to 15% interest promo - runs from Mar. 1 to Mar. 31, 2024 💰</p>
+                        <li>Promo is open to all new and existing GSave customers.</li>
+                        <li>Earn 4% p.a. interest on all your savings this month (no limit).</li>
+                        <li>For the additional promo interest, learn more <a href="https://www.cimbbank.com.ph/en/promotions/promotions/sunkissed-deal-promo.html" target="_blank">here.</a></li><br>
+                        <p class="details-header">Key features:</p>
+                        <li>Access your account through the GCash and CIMB app.</li>
+                        <li>Request and download Bank Certificate.</li>
+                        <li>Physical and Virtual Debit Card available through the CIMB app.</li>
+                        <li>Account holders who maintain a minimum ADB of P5,000 for one month will be able to enjoy free life insurance.</li>
+                        <li>Learn more <a href="https://www.cimbbank.com.ph/en/digital-banking/our-products/gsave.html" target="_blank">here.</a></li>
+                    </ul>
+                </div>
+
+
+
+                    <!-- Row 5 -->
+                <div class="banks-logo">
+                    <img src="cimb-logo.png" alt="cimb bank logo">
+                </div>
+                <div class="banks-savings">UpSave (via CIMB)</div>
+                <div class="banks-interest">
+                    <p class="interest">4% - 15%</p>
+                </div>
+
+                <div class="expand-button">
+                    <i class="fa-solid fa-chevron-down" style="color: #000000;"></i>
+                </div>
+                <div class="interest-details">
+                    <ul>
+                        <li>The regular interest rate of UpSave is 2.5% p.a.</li>
+                        <li>Monthly interest crediting.</li><br>
+                        <p class="details-header">💰 Get up to 15% interest promo - runs from Mar. 1 to Mar. 31, 2024 💰</p>
+                        <li>Promo is open to all new and existing UpSave customers.</li>
+                        <li>Earn 4% p.a. interest on all your savings this month (no limit).</li>
+                        <li>For the additional promo interest, learn more <a href="https://www.cimbbank.com.ph/en/promotions/promotions/sunkissed-deal-promo.html" target="_blank">here.</a></li><br>
+                        <p class="details-header">Key features:</p>
+                        <li>Access your account through the CIMB app.</li>
+                        <li>Request and download Bank Certificate.</li>
+                        <li>Physical and Virtual Debit Card available through the CIMB app.</li>
+                        <li>Account holders who maintain a minimum ADB of P5,000 for one month will be able to enjoy free life insurance.</li>
+                        <li>Learn more <a href="https://www.cimbbank.com.ph/en/digital-banking/our-products/upsave.html" target="_blank">here.</a></li>
+                    </ul>
+                </div>
+
 
 
 
@@ -338,6 +310,36 @@
                         <li>Learn more <a href="https://tonikbank.com/savings-cards/tonik-account" target="_blank">here.</a></li>
                     </ul>
                 </div>
+
+
+ 
+                    <!-- Row 6 -->
+                <div class="banks-logo">
+                    <img src="gotyme-logo.png" alt="gotyme bank logo">
+                </div>
+                <div class="banks-savings">Go Save</div>
+                <div class="banks-interest">
+                    <p class="interest">4%</p>
+                </div>
+
+                <div class="expand-button">
+                    <i class="fa-solid fa-chevron-down" style="color: #000000;"></i>
+                </div>
+                <div class="interest-details">
+                    <ul>
+                        <li>Create up to 5 separate Go Save accounts and earn 5% interest p.a. for each account(no limit).</li>
+                        <li>Monthly interest crediting.</li><br>
+                        <p class="details-header">Key features:</p>
+                        <li>Set customizable target amounts and timeframes for each Go Save accounts.</li>
+                        <li>Schedule auto-saves or save your change when you shop.</li>
+                        <li>Transfers to other local banks are free up to 3 times per week.</li>
+                        <li>Get a free ATM debit card.</li>
+                        <li>Earn Go Rewards points that you can redeem as cash, which will be credited to your account.</li>
+                        <li>Learn more <a href="https://www.gotyme.com.ph/" target="_blank">here.</a></li>
+                    </ul>
+                </div>
+
+
 
                     <!-- Row 10 -->
                 <div class="banks-logo">
@@ -386,10 +388,10 @@
                         <li>Earn a base rate of 3.5% p.a., which applies to savings up to P5,000,000. Excess of P5M will not earn interest.</li>
                         <li>Daily interest crediting.</li><br>
                         <p class="details-header">💰 No Maya account yet? Sign up using our referral code "J6K0M4K1ZN6K". Verify your account and spend at least P20 to get exclusive reward from Maya 💰</p><br>
-                        <p class="details-header">💰 Get up to 14% interest promo - until Feb. 29, 2024 💰</p>
-                        <li>Open Maya Savings account and boost your interest rate to up to 14% p.a. by making payments with Maya.</li>
-                        <li>All bonus interest rates only applies to max balance of up to Php100,000.</li>
-                        <li>Learn more <a href="https://www.maya.ph/deals/aonline-purchase/get-2-pa-intereston-your-maya-savings-when-you-switch-to-maya-2023-september" target="_blank">here.</a></li><br>
+                        <p class="details-header">💰 Get up to 14% interest promo - runs until Mar. 31, 2024 💰</p>
+                        <li>Promo is open to all new and existing Maya users.</li>
+                        <li>All boosted interest rates only applies to your first Php100,000.</li>
+                        <li>For the boost interest, learn more <a href="https://www.mayabank.ph/highinterestsavings/" target="_blank">here.</a></li><br>
                         <p class="details-header">Key features:</p>
                         <li>Access to all Maya app services and features.</li>
                         <li>Request and download Bank Certificate via the Maya app.</li>
