Update interest rates

--- a/index.html
+++ b/index.html
@@ -71,7 +71,45 @@
                 </div>
 
 
-                    <!-- Row 1 -->
+
+
+
+                        <!-- Row 1 -->  
+                <div class="banks-logo">
+                    <img src="ownbank.png" alt="ownbank logo">
+                </div>
+                <div class="banks-savings">Own It</div>
+                <div class="banks-interest">
+                    <p class="interest">6% + 6%</p>
+                </div>
+
+                <div class="expand-button">
+                    <i class="fa-solid fa-chevron-down" style="color: #000000;"></i>
+                </div>
+                <div class="interest-details">
+                    <ul>
+                        <li>Basic accounts earn 6% interest p.a. on savings up to P50,000.</li>
+                        <li>Upgraded accounts earn 6% p.a. on all deposited savings(no limit).</li>
+                        <li>Daily interest crediting.</li><br>
+                        <p class="details-header">💰 Lemoneyd x OwnBank 💰</p>  
+                        <p class="details-header">Get an additional 6% p.a. for 1 month, for a total of 12% p.a + P320,000 Trial Bonus vouchers, which you can use to deposit into your Own It savings.</p>
+
+                        <p class="details-header">Visit <a href="https://app.ownbank.com/lemoneyd" target="_blank">https://app.ownbank.com/lemoneyd</a> and sign up using referral code "EFMPKU".</p>
+                        
+                        <p class="details-header">Full mechanics of the promo <a href="https://www.facebook.com/lemoneydofficial/posts/pfbid0XPCeaZfRibTSFrpHPVSPRZy22pFhRuqXfBcCjb9uArvkwxNddq4QoB2tX49fP6wml" target="_blank">here</a>.</p><br>
+
+                        <p class="details-header">Key features:</p>
+                        <li>Unlimited free bank transfers via InstaPay and PESONet.</li>
+                        <li>Transfer to other OwnBank accounts using mobile number.</li>
+                        <li>Access high-interest Time Deposits.</li>
+                        <li>Request Bank Statement and Certificate by emailing customer support.</li>
+                        <li>Access Mobile load, Game credits, Data plans, and Personal Accident Insurance.</li>
+                        <li>Learn more <a href="https://www.ownbank.com/help-center" target="_blank">here.</a></li>
+                    </ul>
+                </div>
+
+
+                    <!-- Row 2 -->
                 <div class="banks-logo">
                     <img src="diskartech-logo.png" alt="diskartech logo">
                 </div>
@@ -97,39 +135,6 @@
                 </div>
 
 
-                                    <!-- Row 2 -->  
-                <div class="banks-logo">
-                    <img src="ownbank.png" alt="ownbank logo">
-                </div>
-                <div class="banks-savings">Own It</div>
-                <div class="banks-interest">
-                    <p class="interest">6% + 6%</p>
-                </div>
-
-                <div class="expand-button">
-                    <i class="fa-solid fa-chevron-down" style="color: #000000;"></i>
-                </div>
-                <div class="interest-details">
-                    <ul>
-                        <li>Basic accounts earn 6% interest p.a. on savings up to P50,000.</li>
-                        <li>Upgraded accounts earn 6% p.a. on all deposited savings(no limit).</li>
-                        <li>Daily interest crediting.</li><br>
-                        <p class="details-header">💰 Lemoneyd x OwnBank 💰</p>  
-                        <p class="details-header">Get an additional 6% p.a. for 1 month, for a total of 12% p.a + P320,000 Trial Bonus vouchers, which you can use to deposit into your Own It savings.</p>
-
-                        <p class="details-header">Visit <a href="https://app.ownbank.com/lemoneyd" target="_blank">https://app.ownbank.com/lemoneyd</a> and sign up using referral code "EFMPKU".  Full mechanics of the promo <a href="https://www.facebook.com/lemoneydofficial/posts/pfbid0XPCeaZfRibTSFrpHPVSPRZy22pFhRuqXfBcCjb9uArvkwxNddq4QoB2tX49fP6wml" target="_blank">here</a>.</p><br>
-
-                        <p class="details-header">Key features:</p>
-                        <li>Unlimited free bank transfers via InstaPay and PESONet.</li>
-                        <li>Transfer to other OwnBank accounts using mobile number.</li>
-                        <li>Access high-interest Time Deposits.</li>
-                        <li>Request Bank Statement and Certificate by emailing customer support.</li>
-                        <li>Access Mobile load, Game credits, Data plans, and Personal Accident Insurance.</li>
-                        <li>Learn more <a href="https://www.ownbank.com/help-center" target="_blank">here.</a></li>
-                    </ul>
-                </div>
-
-
 
                     <!-- Row 2 -->
                 <div class="banks-logo">
@@ -145,12 +150,11 @@
                 </div>
                 <div class="interest-details">
                     <ul>
-                        <li>The regular interest rate of Netbank Mobile is 4% p.a.</li>
-                        <li>Daily interest crediting.</li><br>
                         <p class="details-header">💰 Lemoneyd x Netbank Mobile 💰</p>
                         <p class="details-header">Get 6% interest p.a. and P10 reward when you sign up using referral code "AAAH2292" & select "Digital Banks PH Tipid Hacks" as the branch.</p><br>
 
                         <p class="details-header">Key features:</p>
+                        <li>Daily interest crediting.</li>
                         <li>Unlimited free bank transfers via InstaPay and PESONet.</li>
                         <li>Access to Bills payment and Mobile load services.</li>
                         <li>Access high-interest Time Deposits.</li>
@@ -388,7 +392,7 @@
                         <li>Earn a base rate of 3.5% p.a., which applies to savings up to P5,000,000. Excess of P5M will not earn interest.</li>
                         <li>Daily interest crediting.</li><br>
                         <p class="details-header">💰 No Maya account yet? Sign up using our referral code "J6K0M4K1ZN6K". Verify your account and spend at least P20 to get exclusive reward from Maya 💰</p><br>
-                        <p class="details-header">💰 Get up to 14% interest promo - runs until Mar. 31, 2024 💰</p>
+                        <p class="details-header">💰 Get up to 14% interest promo - runs from Mar. 1 to Mar. 31, 2024 💰</p>
                         <li>Promo is open to all new and existing Maya users.</li>
                         <li>All boosted interest rates only applies to your first Php100,000.</li>
                         <li>For the boost interest, learn more <a href="https://www.mayabank.ph/highinterestsavings/" target="_blank">here.</a></li><br>
